--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,9 +7,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - run: |
+      - name: Get current actions list
+        run: |
           curl "${{ secrets.BLOB_SAS_TOKEN }}" > actions.json
-          ls -la
+          
       - shell: pwsh
         run: |
            $actions=(cat actions.json | ConvertFrom-Json)
@@ -17,4 +18,4 @@ jobs:
 
       - shell: pwsh 
         run: |
-          ./.github/workflows/functions.ps1
+          ./.github/workflows/functions.ps1 -actions $actions
