--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,6 +20,9 @@ jobs:
 
       - name: Commit changes
         run: |
+          git config --global user.email "github_token@github.com"
+          git config --global user.name "GITHUB_TOKEN"
+          
           git add status.json
           git commit -m "Update status.json"
           git push
