--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,6 +4,8 @@ on:
   schedule:
     - cron: '*/30 * * * *'
 
+  workflow_dispatch:
+    
 jobs:
   fork-em:
     concurrency: there-can-be-only-one
