--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
            $actions=(cat actions.json | ConvertFrom-Json)
            Write-Host "Found [$($actions.Length)] actions in the datafile"
-           Install-Module -Name PSGraphQL -Repository PSGallery -Scope CurrentUser -Allowclobber
+           Install-Module -Name PSGraphQL -Repository PSGallery -Scope CurrentUser -Allowclobber -Force
            ./.github/workflows/functions.ps1 -actions $actions -numberOfReposToDo 250 -access_token "${{ secrets.ACCESS_TOKEN }}"
 
       - name: Commit changes
