Slow down pipeline run to once an hour to prevent lots of cancelled runs (overlapping)

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,7 +8,7 @@ on:
       - .github/workflows/functions.ps1
 
   schedule:
-    - cron: '*/30 * * * *'
+    - cron: '* */1 * * *'
 
   workflow_dispatch:
 
