Run the pipeline every 45 minutes again

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,7 +9,7 @@ on:
       - .github/workflows/repoInfo.ps1
 
   schedule:
-    - cron: '* */1 * * *'
+    - cron: '*/45 * * * *'
 
   workflow_dispatch:
 
