--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -26,4 +26,4 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: report
-          path: VulnerableRepos.txt
+          path: VulnerableRepos-**.txt
