--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,6 +7,7 @@ on:
       - .github/workflows/pipeline.yml
       - .github/workflows/functions.ps1
       - .github/workflows/repoInfo.ps1
+      - .github/workflows/library.ps1
 
   schedule:
     - cron: '*/35 * * * *'
@@ -18,7 +19,7 @@ env:
   numberOfReposToDoRepoInfo: 200
     
 jobs:
-  fork-em:
+  check-em-all:
     concurrency: there-can-be-only-one
     runs-on: ubuntu-latest
     steps:
@@ -29,6 +30,7 @@ jobs:
           curl "${{ secrets.BLOB_SAS_TOKEN }}" > actions.json
           
       - shell: pwsh
+        name: Gotta check 'em all
         run: |
            $actions=(cat actions.json | ConvertFrom-Json)
            Write-Host "Found [$($actions.Length)] actions in the datafile"
