Adding workflow names

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,6 +1,9 @@
 # Fork new action repos
 # Get new data from Dependabot
 # Store the data in the repo for later use
+
+name: Analyze
+
 on:
   push:
     paths:
