Adding more logging info to the report

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ actions.json
 log.txt
 VulnerableRepos.txt
 GITHUB_STEP_SUMMARY
+VulnerableRepos-Any.txt
+VulnerableRepos-Composite.txt
+VulnerableRepos-Node.txt
