--- a/.github/workflows/remove-all-repos.yml
+++ b/.github/workflows/remove-all-repos.yml
@@ -2,8 +2,8 @@ name: Cleanup repos
 on:
   workflow_dispatch:
 
-  schedule:
-    - cron: '*/60 * * * *'
+  #schedule:
+  #  - cron: '*/60 * * * *'
     
 jobs:
   cleanup-all-repos:
