Add schedule back to the main analysis workflow

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,8 +12,9 @@ on:
       - .github/workflows/repoInfo.ps1
       - .github/workflows/library.ps1
 
-  # schedule:
-  #   - cron: '*/60 * * * *'
+  schedule:
+     #- cron: '*/60 * * * *'
+     - cron: '* */2 * * *'
 
   workflow_dispatch:
 
