--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -48,6 +48,10 @@ jobs:
       - name: Commit changes
         if: always()
         run: |
+          # pull to make sure we have the latest contents and that the commit / push will succeed
+          # still fails if these two files have been updated ofc.
+
+          git pull --quiet | Out-Null
           if [[ `git status --porcelain` ]]; then
             git config --global user.email "github_token@github.com"
             git config --global user.name "GITHUB_TOKEN"
