--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,6 +33,14 @@ jobs:
         run: |
           curl "${{ secrets.BLOB_SAS_TOKEN }}" > actions.json
           
+      - name: Get App Token
+        id: get_workflow_token
+        uses: rajbos-actions/workflow-application-token-action@v2.1.0
+        with:
+          application_id: 264650
+          application_private_key: ${{ secrets.Automation_App_Key }}
+          organization: actions-marketplace-validations
+          
       - shell: pwsh
         name: Gotta check 'em all
         run: |
@@ -41,9 +49,9 @@ jobs:
            Install-Module -Name PSGraphQL -Repository PSGallery -Scope CurrentUser -Allowclobber -Force
            Install-Module -name powershell-yaml -Force -Repository PSGallery -Scope CurrentUser -Allowclobber
            # fork repos and load Dependabot status
-           ./.github/workflows/functions.ps1 -actions $actions -numberOfReposToDo ${{ env.numberOfReposToDo }} -access_token "${{ secrets.ACCESS_TOKEN }}"
+           ./.github/workflows/functions.ps1 -actions $actions -numberOfReposToDo ${{ env.numberOfReposToDo }} -access_token ${{ steps.get_workflow_token.outputs.token }} #"${{ secrets.ACCESS_TOKEN }}"
            # get repo information           
-           ./.github/workflows/repoInfo.ps1  -actions $actions -numberofReposToDo ${{ env.numberOfReposToDoRepoInfo }} -access_token "${{ secrets.ACCESS_TOKEN }}"
+           ./.github/workflows/repoInfo.ps1  -actions $actions -numberofReposToDo ${{ env.numberOfReposToDoRepoInfo }} -access_token ${{ steps.get_workflow_token.outputs.token }} #"${{ secrets.ACCESS_TOKEN }}"
 
       - name: Commit changes
         if: always()
