--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -5,7 +5,9 @@ on:
   
   push: 
     branches: 
-      - main    
+      - main
+    paths:
+      - .github/workflows/report.yml
 
   schedule:
     - cron: '1 9 * * *'
