--- a/.github/workflows/dependabot-updates.yml
+++ b/.github/workflows/dependabot-updates.yml
@@ -46,3 +46,22 @@ jobs:
 
            # fork repos and load Dependabot status
            ./.github/workflows/dependabot-updates.ps1 -actions $existingForks -numberOfReposToDo ${{ env.numberOfReposToDo }} -access_token "${{ secrets.ACCESS_TOKEN }}" -access_token_destination "${{ steps.get_workflow_token.outputs.token }}"
+
+      - name: Commit changes
+        if: always()
+        run: |
+          # pull to make sure we have the latest contents and that the commit / push will succeed
+          # still fails if these two files have been updated ofc.
+
+          git pull --quiet
+          if [[ `git status --porcelain` ]]; then
+            git config --global user.email "github_token@github.com"
+            git config --global user.name "GITHUB_TOKEN"
+            
+            git add status.json
+            git add failedForks.json
+            git commit -m "Update status.json"
+            git push
+          else
+            echo "Nothing to commit"
+          fi
