Run for more repos

--- a/.github/workflows/repo-info.yml
+++ b/.github/workflows/repo-info.yml
@@ -17,8 +17,7 @@ on:
   workflow_dispatch:
 
 env:
-  numberOfReposToDo: 100
-  numberOfReposToDoRepoInfo: 100
+  numberOfReposToDo: 500
     
 jobs:
   get-repo-information:
@@ -47,7 +46,7 @@ jobs:
            Install-Module -Name PSGraphQL -Repository PSGallery -Scope CurrentUser -Allowclobber -Force
            Install-Module -name powershell-yaml -Force -Repository PSGallery -Scope CurrentUser -Allowclobber
            # get repo information           
-           ${{ github.workspace }}/.github/workflows/repoInfo.ps1  -actions $actions -numberofReposToDo ${{ env.numberOfReposToDoRepoInfo }} -access_token "${{ secrets.ACCESS_TOKEN }}" -access_token_destination ${{ steps.get_workflow_token.outputs.token }}
+           ${{ github.workspace }}/.github/workflows/repoInfo.ps1  -actions $actions -numberofReposToDo ${{ env.numberOfReposToDo }} -access_token "${{ secrets.ACCESS_TOKEN }}" -access_token_destination ${{ steps.get_workflow_token.outputs.token }}
 
       - name: Commit changes
         if: always()
