Add file path to trigger

--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -8,6 +8,7 @@ on:
       - main
     paths:
       - .github/workflows/report.yml
+      - .github/workflows/report.ps1
 
   schedule:
     - cron: '1 9 * * *'
