--- a/.github/workflows/oss-scan.yml
+++ b/.github/workflows/oss-scan.yml
@@ -34,7 +34,7 @@ jobs:
            $actions=(cat status.json | ConvertFrom-Json)
            Write-Host "Found [$($actions.Length)] actions in the datafile"
            $numberOfReposToDo = $actions.Length
-           ./.github/workflows/ossf-scan.ps1 -actions $actions -numberOfReposToDo $numberOfReposToDo -logSummary "$($env:GITHUB_STEP_SUMMARY)" -access_token_destination ${{ steps.get_workflow_token.outputs.token }}
+           ./.github/workflows/ossf-scan.ps1 -actions $actions -numberOfReposToDo $numberOfReposToDo -logSummary "$($env:GITHUB_STEP_SUMMARY)" -access_token "${{ secrets.ACCESS_TOKEN }}" -access_token_destination ${{ steps.get_workflow_token.outputs.token }}
 
       - uses: actions/upload-artifact@v3.1.1
         with:
