--- a/.github/workflows/ossf-scan.yml
+++ b/.github/workflows/ossf-scan.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
            $actions=(cat status.json | ConvertFrom-Json)
            Write-Host "Found [$($actions.Length)] actions in the datafile"
-           //$numberOfReposToDo = $actions.Length
+           # $numberOfReposToDo = $actions.Length
            $numberOfReposToDo = 1000
            ./.github/workflows/ossf-scan.ps1 -actions $actions -numberOfReposToDo $numberOfReposToDo -logSummary "$($env:GITHUB_STEP_SUMMARY)" -access_token "${{ secrets.ACCESS_TOKEN }}" -access_token_destination ${{ steps.get_workflow_token.outputs.token }}
 
