--- a/.github/workflows/repo-info.yml
+++ b/.github/workflows/repo-info.yml
@@ -27,10 +27,13 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Get current actions list
+        shell: pwsh
         run: |
           curl "${{ secrets.BLOB_SAS_TOKEN }}" > actions.json
+          
           ls -la
           cat actions.json
+          $actions=(cat actions.json | ConvertFrom-Json)
           
       - uses: actions/upload-artifact@v3
         with:
